# arcturus

./: README.md  docker-compose.devcontainer.yml  docker-compose.yml
.github/workflows/: release-api.yml
admin/: package.json
admin/pages/: _app.js  _document.js  index.js
api/: Dockerfile  README.md  pyproject.toml
api/.devcontainer/: Dockerfile  devcontainer.json
api/api/: config.py
api/identity/: models.py
apps/admin/: package-lock.json
apps/api/: .dockerignore  pyproject.toml
apps/api/.devcontainer/: Dockerfile  devcontainer.json
apps/api/api/: db.py  main.py
apps/api/identity/: routes.py
